# ProPicker

./: .gitmodules  GUI_QUICKSTART.md  QUICKSTART.md  README.md  TUTORIAL1:empiar10988_prompt_based_picking.ipynb  TUTORIAL2:empiar10988_fine_tuning.ipynb  empiar10988_cluster_based_picking.ipynb  empiar10988_fine_tuning.py  empiar10988_inference.py  environment.yml  fine_tune_empiar10988.py  finetune_cfg.py  fix_checkpoint.py  fixed_prompts_empiar10988.json  inference_empiar10988.py  locmap_to_picks.py  locmap_to_picks_gui.py  paths.py  pick_from_locmap.py  prompt_picker_gui.py  prompt_selector_gui.py  propicker_predict_locmap.py  pyproject.toml  train.py  train_cfg.py  train_cfg_old.py
clustering_and_picking/: __init__.py
data/: augmentation.py  promptable_picking_datamodule.py  promptable_picking_dataset.py  utils.py
data/preparation_functions/: __init__.py  prepare_empiar10988.py  prepare_segmentation_subtomos.py  prepare_shrec2021.py  prepare_tomotwin.py
data_download_scripts/: download_empiar10988_def.sh
datasets/: download_tomotwin_ckpt.sh  download_train_data.sh
evaluation/: __init__.py
gui_tutorial/: README.md
inference/: get_pred_locmap_dict.py  tomotwin.py
model/: __init__.py  promptable_picker.py
propicker/: paths.py  pick_from_locmap.py  pick_from_locmap_gui.py  prompt_selector_gui.py  propicker_predict_locmap.py  pyproject.toml
propicker/DeepETPicker_ProPicker/: .gitignore  README.md  environment.yml  test.py  train.py
propicker/DeepETPicker_ProPicker/dataset/: dataloader_DynamicLoad.py
propicker/DeepETPicker_ProPicker/model_/: __init__.py  conditioned_propicker.py  model_loader.py
propicker/DeepETPicker_ProPicker/model__/: conditioned_propicker.py  model_loader.py  residual_unet_att.py
propicker/DeepETPicker_ProPicker/options/: option.py
propicker/clustering_and_picking/: clustering.py
propicker/data/: __init__.py  promptable_picking_datamodule.py  promptable_picking_dataset.py  subtomos.py
propicker/data/preparation_functions/: prepare_empiar10988.py  prepare_shrec2021.py  (+2 more)
propicker/evaluation/: evaluation_routine.py  tomotwin_evaluation_routine.py
propicker/inference/: __init__.py  get_pred_locmap_dict.py  tomotwin.py
propicker/model/: encoder.py  layers.py  promptable_decoder.py  promptable_picker.py
propicker/training_from_scratch/: finetune_cfg.py  train.py  train_cfg.py
propicker/utils/: mrctools.py
python_tutorial/: download_tutorial_data.sh
python_tutorial/tutorial1:prompt_based_picking/: tutorial.ipynb
python_tutorial/tutorial2:fine_tuning/: inference.py  tutorial.ipynb
python_tutorial/tutorial_1_prompt_based_picking/: tutorial.ipynb
python_tutorial/tutorial_2_fine_tuning/: fine_tune.py  fixed_prompts_empiar10988.json  tutorial.ipynb
scripts/: run_locmap_to_picks_vnc.sh  run_prompt_picker_vnc.sh
