[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propicker"
version = "0.1.0"
description = "Prompt-based particle picking tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "napari",
    "qtpy",
    "PySide6",
    "mrcfile",
    "scipy",
    "pandas",
    "scikit-image",
]

[project.scripts]
propicker-prompt-selector = "propicker.prompt_selector_gui:main"
propicker-predict-locmap = "propicker.propicker_predict_locmap:main"
propicker-pick-from-locmap-gui = "propicker.pick_from_locmap_gui:main"
propicker-pick-from-locmap = "propicker.pick_from_locmap:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["propicker*"]
exclude = ["data*", "datasets*", "result*", "pred_locmaps*", "prompt_subtomos*", "DeepETPicker_*", "lightning_logs*", "model__*", "model_bak*", "scripts*"]
